# oj-backend

./: CMakeLists.txt  README.md  REAME.md  main.cpp  run_oj-backend.sh.in
app/: CMakeLists.txt
app/db/: judge_results.sql  judgedb.sql  problems.sql  submissions.sql  test_cases.sql
app/include/: Application.hpp  AuthService.hpp  DBManager.hpp  DbManager.hpp  RedisManager.hpp
app/include/api/: Login.hpp  api.hpp  authentication.hpp  problems.hpp  submissions.hpp
app/include/authentication/: AuthService.hpp  User.hpp
app/include/dbop/: DbInsertOp.hpp  DbOpFactory.hpp  DbOperation.hpp  DbQueryOp.hpp  DbUpdateOp.hpp
app/include/services/: AuthService.hpp  IAuthRequired.hpp  ProblemService.hpp  ServiceInfo.hpp  SubmissionService.hpp  TokenManager.hpp
app/src/: Application.cpp  AuthService.cpp  DBManager.cpp  DbManager.cpp  RedisManager.cpp
app/src/api/: Login.cpp  api.cpp  authentication.cpp  problems.cpp  submissions.cpp
app/src/authentication/: AuthService.cpp  User.cpp
app/src/dbop/: DbInsertOp.cpp  DbOpFactory.cpp  DbOperation.cpp  DbQueryOp.cpp  DbUpdateOp.cpp
app/src/services/: AuthService.cpp  IAuthRequired.cpp  ProblemService.cpp  SubmissionService.cpp  TokenManager.cpp
config/: config.ini  kafel.policy
core/: CMakeLists.txt
core/include/: Configurator.hpp  Core.hpp  Dict.hpp  Dict.inl  FileWriter.hpp  Http.hpp  HttpMethod.hpp  JsonSerializable.hpp  Logger.hpp  Queue.hpp  Queue.inl  ThreadPool.hpp  Types.hpp
core/src/: Configurator.cpp  FileWriter.cpp  Logger.cpp  ThreadPool.cpp  Types.cpp
database/: CMakeLists.txt
database/db/: judge_results.sql  judgedb.sql  problem_limits.sql  problems.sql  submissions.sql  test_cases.sql  users.sql
database/db/judgedb/: judge_results.sql  problems.sql  submissions.sql  test_cases.sql
database/db/userdb/: users.sql
database/include/: DBManager.hpp  DBPool.hpp  DBTask.hpp  DBWorker.hpp  DbPool.hpp  DbWorker.hpp  MySQLDB.hpp  ProblemInfo.hpp  RedisCache.hpp  ResultSet.hpp  UserInfo.hpp
database/include/judgedb/: JudgeInquirer.hpp  JudgeWriter.hpp  ProblemInquirer.hpp  ProblemWriter.hpp  UserInquirer.hpp  UserWriter.hpp
database/src/: DBManager.cpp  DBPool.cpp  DBTask.cpp  DBWorker.cpp  DbPool.cpp  DbWorker.cpp  MySQLDB.cpp  RedisCache.cpp
database/src/judgedb/: JudgeInquirer.cpp  JudgeWriter.cpp  ProblemInquirer.cpp  ProblemWriter.cpp  UserInquirer.cpp  UserWriter.cpp
exceptions/: CMakeLists.txt
exceptions/include/: FileException.hpp  ParameterException.hpp  SystemException.hpp
exceptions/src/: FileException.cpp  ParameterException.cpp  SystemException.cpp
judge/: CMakeLists.txt
judge/include/: JudgeManager.hpp  JudgeResult.hpp  Judger.hpp  SubmissionSchema.hpp
judge/include/actuators/: Actuator.hpp  CppActuator.hpp  PythonActuator.hpp
judge/include/compilers/: Compiler.hpp  CppCompiler.hpp
judge/include/utilities/: ExecutionResult.hpp  JudgeResult.hpp  Language.hpp  Problem.hpp  ResourceLimits.hpp  Submission.hpp
judge/src/: JudgeManager.cpp  JudgeResult.cpp  Judger.cpp  SubmissionSchema.cpp
judge/src/actuators/: Actuator.cpp  CppActuator.cpp  PythonActuator.cpp
judge/src/compilers/: CppCompiler.cpp
judge/src/utilities/: ExecutionResult.cpp  JudgeResult.cpp  Language.cpp
